--- a/public/assets/css/style-comunidades.css
+++ b/public/assets/css/style-comunidades.css
@@ -286,26 +286,7 @@
     border-radius: 20px
 }
 
-.modal-header{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.modal-title{
-    color: #f26699;
-    font-family: 'Fredoka';
-}
-
-.fecha{
-    background-color: #e4e4e4;
-    color: #868586;
-}
-
-.criar{
-    background-color: #F26699;
-    color: #fff;
-}
 
 .cont-form{
     display: flex;
@@ -486,4 +467,69 @@ form .errorField{
     font-size: 14px;
     text-align: start;
 }
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+    min-height: 100vh;
+    
+  }
+
+.modal-title{
+    color: #F26699;
+    font-size: 24px;
+}
+
+.criar{
+    background-color: #F26699;
+    color: #fff;
+    width: 60%;
+    display: block;
+    margin: auto;
+}
+
+.criar:hover{
+    background-color: #F88AC5;
+    color: #fff;
+}
+
+  
+  .modal-content {
+    background-color: #fff;
+    margin: 6% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 200px;
+    max-width: 600px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0,0, 0, 0.2);
+    max-height: 85vh; /* Altura máxima do modal em relação à viewport */
+    overflow-y: auto;
+  }
+
+  
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
