Correção e adição do modal de postagem (a ser continuado)

--- a/public/assets/css/style-modal-post.css
+++ b/public/assets/css/style-modal-post.css
@@ -1,3 +1,13 @@
+@font-face{
+    font-family: "Fredoka";
+    src: url('../fonts/Fredoka-VariableFont_wdth,wght.ttf');
+}
+
+@font-face{
+    font-family: "Inter";
+    src: url('../fonts/Inter-VariableFont_opsz,wght.ttf');
+}
+
 .side-item button{
     display: flex;
     width: 100%;
@@ -27,12 +37,12 @@
     outline: none;
 }
 
-.box-modal-post{
+.box-modal-post, .box-modal-post-perfil{
     display: none;
     
 }
 
-.box-modal-post.active{
+.box-modal-post.active, .box-modal-post-perfil.active{
     position: fixed;         /* Cover the whole screen */
     top: 0;
     left: 0;
@@ -45,7 +55,7 @@
     z-index: 1000;
 }
 
-.box-modal-post .modal-post{
+.box-modal-post .modal-post, .box-modal-post-perfil .modal-post-perfil{
     
     width: 900px; /* Ajuste o tamanho conforme necessário */
     border: solid 1px #ccc;
@@ -62,7 +72,7 @@
     max-height: 80%; /* Adapta a altura do modal em telas menores */
     overflow: auto; /* Permite rolagem se o conteúdo exceder a altura */
 }
-.modal-post .cont-modal-post .cont-header-modal{
+.modal-post .cont-modal-post .cont-header-modal, .modal-post-perfil .cont-header-modal{
     display: flex;
     width: 100%;
     justify-content: end;
@@ -76,20 +86,20 @@
     height: 100%;
 }
 
-.modal-post .cont-modal-post .cont-header-modal button{
+.modal-post .cont-modal-post .cont-header-modal button, .modal-post-perfil .cont-header-modal button{
     display: flex;
     background-color: transparent;
     border: none;
     cursor: pointer;
 }
-.modal-post .cont-header-modal button i{
+.modal-post .cont-header-modal button i, .modal-post-perfil .cont-header-modal i{
     font-size: 20px;
 }
-.modal-post .cont-modal-post .cont-header-modal button:focus{
+.modal-post .cont-modal-post .cont-header-modal button:focus, .modal-post-perfil .cont-header-modal button:focus{
     border: none;
     outline: none;
 }
-.modal-post .cont-modal-post .cont-header-modal button:active{
+.modal-post .cont-modal-post .cont-header-modal button:active, .modal-post-perfil .cont-header-modal button:active{
     border: none;
     outline: none;
 }
@@ -297,4 +307,121 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+}
+
+/* Modal de Informações */
+
+.modal-post-perfil .cont-info-post{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.modal-post-perfil .cont-info-post .cont-img-post{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-post-perfil .cont-info-post .cont-img-post img{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+.modal-post-perfil .cont-info-post .cont-lado-direito{
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-info-rendimento{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 10px;
+    justify-content: space-around;
+    align-items: center;
+}
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-info-rendimento .icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-info-rendimento .icon i{
+    font-size: 20px;
+    color: #d5527b;
+}
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-info-rendimento .icon small{
+    font-size: 18px;
+    font-family: 'Inter';
+    font-weight: bold;
+    color: #d5527b;
+}
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-desc{
+    display: flex;
+    width: 100%;
+    padding: 10px;
+    justify-content: start;
+    align-items: center;
+}
+
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-desc .txtDesc{
+    font-family: 'Inter';
+    color: rgb(23, 22, 22);
+    font-size: 18px;
+    text-align: justify;
+}
+
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-comentarios{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-comentarios h6{
+    font-family: 'Inter';
+    color: #d5527b;
+    text-align: center;
+}
+
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-comentarios form{
+    display: flex;
+    width: 100%;
+    position: fixed;
+    justify-content: start;
+    align-items: start;
+    background-color: #f0f0f0;
+    padding: 8px 10px;
+    position: fixed;
+    bottom: 18px;
+    width: 50%;
+    border-radius: 10px 10px 10px 10px
+}
+
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-comentarios form input{
+    border:none;
+    padding: 10px;
+    border-radius: 8px;
+    flex-grow: 1;
+    background-color: #f0f0f0;
+    outline: none;
+    color: #000000;
+    font-size: 1rem;
+}
+
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-comentarios form button{
+    border: none;
+    background: none;
+    color: #f26699;
+    cursor: pointer;
+}
+.modal-post-perfil .cont-info-post .cont-lado-direito .cont-comentarios form button >span{
+    font-size: 1.8rem;
 }
