--- a/public/assets/css/style-feed.css
+++ b/public/assets/css/style-feed.css
@@ -413,51 +413,11 @@
     box-sizing: border-box;
 }
 
-/* Estilo para o botão de enviar comentário */
-.modal-content-coment .enviar {
-    background-color:#f26699;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 50%;
-    font-weight: bold;
-}
-
-.botoes{
-    display: flex;
-    gap: 15px;
-}
-
-.cancel{
-    background-color: #e4e4e4;
-    color: #868586;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 50%;
-    font-weight: bold;
-}
-
-.cancel:hover{
-    background-color: #d9d4d4;
-}
-
-.modal-content-coment .enviar:hover {
-    background-color: #F88AC5;
-}
-
-/* Estilo para cada comentário */
-.comentario {
-   
-    font-size: 16px;
-    left:30%;
+.legenda-perfil {
+    font-size: 0.9em;
     color: #333;
-    padding-top: 60px;   
-}
-
-.comentario strong {
-    color: #f26699; /* Cor do nome do usuário */
+    margin-top: 8px;
+    right: 12%;
+    word-wrap: break-word;
+    line-height: 1.4;
 }
