--- a/public/assets/css/style-modal-post.css
+++ b/public/assets/css/style-modal-post.css
@@ -55,6 +55,10 @@
     z-index: 1000;
 }
 
+.box-modal-post-perfil{
+    position: relative;
+}
+
 .box-modal-post .modal-post, .box-modal-post-perfil .modal-post-perfil{
     
     width: 900px; /* Ajuste o tamanho conforme necessário */
@@ -70,7 +74,13 @@
     transform: translate(-50%, -50%); /* Ajusta o modal para que o centro esteja no meio da tela */
     max-width: 90%; /* Adapta o modal em telas menores */
     max-height: 80%; /* Adapta a altura do modal em telas menores */
-    overflow: auto; /* Permite rolagem se o conteúdo exceder a altura */
+   
+}
+
+.box-modal-post-perfil .modal-post-perfil{
+    width: 1200px;
+    overflow-y: hidden;
+    height: 100%;
 }
 .modal-post .cont-modal-post .cont-header-modal, .modal-post-perfil .cont-header-modal{
     display: flex;
@@ -323,21 +333,23 @@
     display: flex;
     width: 100%;
     height: 100%;
-    justify-content: center;
+    justify-content: start;
+    margin-right: 20px;
     align-items: center;
 }
 
 .modal-post-perfil .cont-info-post .cont-img-post img{
     width: 100%;
-    height: 100%;
+    height: 90%;
     object-fit: fill;
 }
 .modal-post-perfil .cont-info-post .cont-lado-direito{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: auto;
-    justify-content: center;
+    height: 100%;
+    
+    justify-content: start;
     align-items: start;
 }
 .modal-post-perfil .cont-info-post .cont-lado-direito .cont-info-rendimento{
@@ -382,10 +394,12 @@
 .modal-post-perfil .cont-info-post .cont-lado-direito .cont-comentarios{
     display: flex;
     flex-direction: column;
+    position: relative;
     width: 100%;
     height: auto;
     justify-content: center;
     align-items: center;
+    overflow-y: auto;
 }
 
 .modal-post-perfil .cont-info-post .cont-lado-direito .cont-comentarios h6{
